--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,27 +24,9 @@ jobs:
     - name: Install dependencies
       run: python -m pip install --upgrade pip
 
-    - name: Get list of modified files
-      id: modified_files
+    - name: Run tests
       run: |
-        git fetch origin main
-        git diff --name-only origin/main...HEAD > modified_files.txt
-
-    - name: Display modified files
-      run: cat modified_files.txt
-
-    - name: Run circle tests
-      if: contains(steps.modified_files.outputs.modified_files, 'circle.py')
-      run: python -m unittest circle.py
-
-    - name: Run rectangle tests
-      if: contains(steps.modified_files.outputs.modified_files, 'rectangle.py')
-      run: python -m unittest rectangle.py
-
-    - name: Run square tests
-      if: contains(steps.modified_files.outputs.modified_files, 'square.py')
-      run: python -m unittest square.py
-
-    - name: Run triangle tests
-      if: contains(steps.modified_files.outputs.modified_files, 'triangle.py')
-      run: python -m unittest triangle.py
+        python -m unittest circle.py
+        python -m unittest rectangle.py
+        python -m unittest square.py
+        python -m unittest triangle.py
